--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -3213,7 +3213,7 @@ span.date-range {
 span.date-range .subsup {
 	align-items: center;
 	bottom: 0;
-	margin: 0 0.05em 0 0.1em;
+	margin: -0.5em 0.05em 0 0.1em;
 }
 span.date-range .subsup sup {
 	font-size: 1em;
